objects/Snapshot__c.object
<CustomObject>
    <description>used for snapshot reporting for titles</description>
    <fields>
        <fullName>Count__c</fullName>
        <description>Stores the summarized number from reports</description>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <description>Date of Report-mock for demo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Titles__c</fullName>
        <description>Used to store title statuses from reports</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Titles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Snapshot</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>